# email-subscription-project-python

./: .gitignore  activities.py  pyproject.toml  readme.md  run_flask.py  run_worker.py  shared_objects.py  workflows.py
subscription/: activity_function.py  run_flask.py  run_worker.py  shared_objects.py
tests/: conftest.py  test_run_worker.py  test_workflow.py  workflow_test.py
