[tool.poetry]
name = "temporalio-samples"
version = "0.1a1"
description = "Temporal.io Python SDK with Flask"
license = "MIT"
authors = ["Temporal Technologies Inc <sdk@temporal.io>"]
readme = "README.md"
homepage = "https://github.com/temporalio/samples-python"
repository = "https://github.com/temporalio/samples-python"
documentation = "https://docs.temporal.io/docs/python"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/temporalio/samples-python/issues"

[tool.poetry.dependencies]
python = "^3.7"
temporalio = "^1.0.0"
flask = {extras = ["async"], version = "^2.2.2"}
ruff = "^0.0.246"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"



[tool.poetry.group.pydantic]
optional = true
dependencies = { pydantic = "^1.10.4" }


[tool.poe.tasks]
format = [{cmd = "ruff --fix ."}, {cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "ruff check ."}, {cmd = "black --check ."}, {cmd = "isort --check-only ."}]
test = "pytest"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_errors = true

[tool.ruff]
select = ["E", "F"]
line-length = 99